--- a/jokenpo/build.gradle
+++ b/jokenpo/build.gradle
@@ -17,7 +17,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
 
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.2.6.RELEASE'
+    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.2.0.RELEASE'
+
     compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
+    compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.2'
+
+    testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
