--- a/jokenpo/src/main/resources/application-dev.properties
+++ b/jokenpo/src/main/resources/application-dev.properties
@@ -1,2 +1,7 @@
-spring.application.name=BTG Jokenpo
-spring.profiles.active=dev
+# Application Port and Name
+server.port=8080
+spring.application.name=BTG Jokenpo DESENVOLVIMENTO
+
+# Log Level
+#logging.level.org.springframework.web=DEBUG
+#logging.level.root=WARN
