--- a/jokenpo/src/main/resources/application-prd.properties
+++ b/jokenpo/src/main/resources/application-prd.properties
@@ -1,1 +1,7 @@
-server.port=8080
+# Application Port and Name
+server.port=8081
+spring.application.name=BTG Jokenpo
+
+# Log Level
+logging.level.org.springframework.web=ERROR
+logging.level.root=ERROR
