--- a/jokenpo/.gitignore
+++ b/jokenpo/.gitignore
@@ -16,11 +16,12 @@ build/
 
 ### IntelliJ IDEA ###
 .idea
+.idea/
+.idea/*
 *.iws
 *.iml
 *.ipr
 out/
-/idea/
 
 ### NetBeans ###
 /nbproject/private/
