Winner method. Jockenpo core.

--- a/jokenpo/src/main/resources/application-dev.properties
+++ b/jokenpo/src/main/resources/application-dev.properties
@@ -3,5 +3,5 @@ server.port=8080
 spring.application.name=BTG Jokenpo DESENVOLVIMENTO
 
 # Log Level
-#logging.level.org.springframework.web=DEBUG
-#logging.level.root=WARN
+logging.level.org.springframework.web=DEBUG
+logging.level.root=WARN
