--- a/jokenpo/src/main/resources/application.properties
+++ b/jokenpo/src/main/resources/application.properties
@@ -5,11 +5,11 @@ spring.profiles.active=dev
 server.servlet.context-path=/v1/btg/jokenpo
 
 # Logger Configuration
-#logging.file.path=./logs
-#logging.file.name=btg-jokenpo.log
-#logging.file.max-history=7
-#logging.file.total-size-cap=7
-#logging.file.max-size=10MB
-#logging.level.root=ERROR
-#logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
-#logging.pattern.file= "%d{yyyy-MM-dd } [%thread] %-5level %logger{36} - %msg%n"
+logging.file.path=./logs
+logging.file.name=btg-jokenpo.log
+logging.file.max-history=7
+logging.file.total-size-cap=7
+logging.file.max-size=10MB
+logging.level.root=ERROR
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file= "%d{yyyy-MM-dd } [%thread] %-5level %logger{36} - %msg%n"
