--- a/jokenpo/src/main/resources/application-test.properties
+++ b/jokenpo/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 # Application Port and Name
 server.port=8081
-spring.application.name=BTG Jokenpo TESTE
+spring.application.name=BTG Jokenpo TEST
 
 # Log Level
 logging.level.org.springframework.web=INFO
