--- a/jokenpo/build.gradle
+++ b/jokenpo/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     compile group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
     compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.2'
 
-    testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
@@ -30,6 +30,11 @@ dependencies {
 
 }
 
+apply plugin: 'java-library'
+
 test {
-    useJUnitPlatform()
+    filter {
+        //all integration tests, by naming convention
+        includeTestsMatching "*Test"
+    }
 }
