--- a/jokenpo/src/main/resources/application-hmg.properties
+++ b/jokenpo/src/main/resources/application-hmg.properties
@@ -1,6 +1,6 @@
 # Application Port and Name
 server.port=8081
-spring.application.name=BTG Jokenpo HOMOLOGACAO
+spring.application.name=BTG Jokenpo HOMOLOGATION
 
 # Log Level
 logging.level.org.springframework.web=INFO
